# ffmpeg-command-java

./: .gitignore  Build_FFmpeg.md  Build_Project.md  README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
doc/: config.texi
doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc  libavutil-uninstalled.pc  libswresample-uninstalled.pc  libswscale-uninstalled.pc
example/: build.gradle
example/src/main/: AndroidManifest.xml
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg-armeabi-v7a/: bintray.gradle  build.gradle
ffmpeg-armeabi-v7a/src/main/: AndroidManifest.xml
ffmpeg-build/: ffmpeg_configure.sh
ffmpeg-java/: bintray.gradle  build.gradle
ffmpeg-java/src/main/: AndroidManifest.xml
ffmpeg-jni/: CMakeLists.txt  build.gradle
ffmpeg-jni/src/main/: AndroidManifest.xml
ffmpeg-jni/src/main/cpp/: cmdutils.c  com_dyhdyh_ffmpeg_FFmpegJNI.c  com_dyhdyh_ffmpeg_FFmpegJNI.cpp  com_dyhdyh_ffmpeg_FFmpegJNI.h  ffmpeg.c  ffmpeg_callback.c  ffmpeg_callback.cpp  ffmpeg_callback.h
ffmpeg-jni/src/main/java/com/dyhdyh/ffmpeg/: FFmpegJNI.java  OnFFmpegLoggerListener.java  OnFFmpegProgressListener.java
ffmpeg-jni/src/main/java/com/dyhdyh/ffmpeg/exception/: FFmpegException.java
ffmpeg-jni/src/main/java/com/dyhdyh/ffmpeg/listener/: OnFFmpegLoggerListener.java  OnFFmpegProgressListener.java  OnFFmpegResultListener.java
ffmpeg-jni/src/main/java/com/dyhdyh/ffmpeg/listener/impl/: SimpleFFmpegLoggerListener.java  SimpleFFmpegProgressListener.java
ffmpeg-native/: CMakeLists.txt  build.gradle
ffmpeg-native/ffmpeg-build/: Build_FFmpeg.md  build_android.sh  build_config.sh  build_fdk_aac.sh  build_ffmpeg.sh  build_libx264.sh  build_project.sh  build_x264.sh  ffmpeg_configure.sh  x264_configure.sh
ffmpeg-native/src/main/: AndroidManifest.xml
ffmpeg-native/src/main/cpp/: android_log.h  cmdutils.c  cmdutils.h  com_dyhdyh_ffmpegjni_FFmpegJNI.c  com_dyhdyh_ffmpegjni_FFmpegJNI.h  ffmpeg.c  ffmpeg.h  ffmpeg_callback.c  ffmpeg_callback.h
ffmpeg/src/main/cpp/: ffmpeg.cpp
(+18 files in other folders)
